[package]
name = "garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["env", "derive"] }
directories = "5.0.1"
edit = "0.1.4"
rprompt = "2.1.1"
slug = "0.1.5"
