[package]
name = "garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["env", "derive"] }
directories = "5.0.1"
edit = "0.1.4"
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
rprompt = "2.1.1"
slug = "0.1.5"
tempfile = "3.8.1"
thiserror = "1.0.51"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.5.0"
